3.0.0 Refactor: remove Reactor from adventure, persona, world handlers and text moderation
- Replace ReactiveTextModerationPort with synchronous TextModerationPort using RestClient
- Convert ModerationRequest and TextModerationResult to records
- Move content moderation from adventure, persona and world handlers to inbound validation layer
- Migrate persona, adventure, adventure lorebook, world, and world lorebook controllers from reactive to synchronous return types
- Adapt adventure, persona and world handler unit tests to use direct method calls instead of StepVerifier
- Migrate TextModerationAdapter tests from WebClient to RestClient with WireMock
- Remove duplicate test classes from old package locations
- Introduce operation-based authorization authorizers
- Add OpenAI API configuration class